# 20252-team-5

./: CMakeLists.txt  Makefile  README.md
assets/layout/: nivel1.txt  nivel2.txt  nivel3.txt
include/: Enum.h  Fase.h  Jogador.h  Jogo.h  MaquinaDeReciclagem.h  Monstro.h  Npc.h  Personagem.h  PowerUp.h  Som.h  Tela.h  Temporizador.h  Timer.h  VariaveisGlobais.h
src/: Fase.cpp  Jogador.cpp  Jogo.cpp  MaquinaDeReciclagem.cpp  Monstro.cpp  Npc.cpp  PowerUp.cpp  Tela.cpp  Temporizador.cpp  Timer.cpp  VariaveisGlobais.cpp  main.cpp  personagem.cpp
